2010-03-11  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_dialog_init): Left-justify
	the primary dialog text.
	(install_dialog_finalize): Close/unref the pixbuf loader.
	(install_dialog_new): Only extract the 128x128 icon (don't do
	fallback, Silverlight doesn't) and load it asynchronously into a
	GdkPixbuf that we'll set on the GtkImage.
	(install_html): Implemented, more or less.
	(install_icons): New function to install the icons needed by the
	.desktop files.
	(install_gnome_desktop): Modified a bit to only bother with the
	48x48 icon - if it doesn't exist, don't bother falling back to the
	others (Silverlight doesn't).
	(install_dialog_install): Call install_icons().

2010-03-11  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp (Paint): correct background painting and
	clipping (clip before drawing our render_list in FTB or the layers
	in BTF).

	* canvas.h/canvas.cpp (GetCoverageBounds): override UIElement's
	implementation and return coverage_bounds regardless of if we're
	toplevel or not.  fixes DRT 98 when using FTB rendering.

2010-03-11  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_dialog_init): seems the bots
	have an old gtk that doesn't have gtk_dialog_get_content_area() so
	we'll have to poke the dialog->vbox directly.
	(notify_cb): close the file handle here.
	(extract_icons): Don't close the file handle here as GetResource()
	is meant to be async.

2010-03-11  Alan McGovern  <amcgovern@novell.com>

	* pal/gtk/pal-gtk.cpp: Sprinkle some null cheks in
	  MoonWindowingSystemGtk::CheckInstalled to prevent moon-unit
	  from blowing up. Similar checks are probably needed
	  elsewhere.

2010-03-11  Chris Toshok  <toshok@ximian.com>

	* runtime.cpp,h (Paint): reverse the paint foreground/background
	containment so that we benefit from the front-to-back pass while
	painting the background.
	(PaintBackground): split out the background painting here, called
	from Paint.
